--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>一个橙子</title>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>一个橙子</title>
+
+  <link rel="shortcut icon" href="/static/orange.ico"/>
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
